# bellecour-gamebook

./: .gitignore  README.html  README.md  gamebook.sublime-workspace
editor/: Cargo.toml
gamebook/: .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  client.js  index.js  index.wasm  key_code.cpp  wasm.ps1
gamebook/cmake/: .ninja_deps  .ninja_log  build.ninja  client.ini  config.ini  config.toml  saves.toml  splash.txt
gamebook/cmake/Izydor_v0.2.1/pages/: index.toml  unknow.toml
gamebook/cmake/pages/: C_1_s_1.toml  C_1_s_10.toml  C_1_s_11.toml  C_1_s_12.toml  C_1_s_13.toml  C_1_s_14.toml  C_1_s_15.toml  C_1_s_16.toml  C_1_s_17.toml  C_1_s_18.toml  C_1_s_19.toml  C_1_s_2.toml  C_1_s_20.toml  C_1_s_21.toml  C_1_s_22.toml  C_1_s_23.toml  C_1_s_24.toml  C_1_s_25.toml  C_1_s_26.toml  C_1_s_27.toml  C_1_s_3.toml  C_1_s_4.toml  C_1_s_5.toml  C_1_s_6.toml  C_1_s_7.toml  C_1_s_8.toml  C_1_s_9.toml  C_2_s_1.toml  C_2_s_10.toml  C_2_s_11.toml  C_2_s_12.toml  C_2_s_14.toml  C_2_s_15.toml  C_2_s_16.toml  C_2_s_21.toml  C_2_s_22.toml  C_2_s_23.toml  C_2_s_24.toml  C_2_s_26.toml  C_2_s_27.toml  (+55 more)
gamebook/source/: main.cpp
gamebook/source/console/: input.h
gamebook/source/core/: core.cpp  core.h
gamebook/source/debug/: logger.cpp  logger.h
gamebook/source/error/: logger.cpp  logger.h  message.cpp  message.h
gamebook/source/filesystem/: ini.cpp  ini.h  reader.cpp  reader.h  table.cpp  table.h  toml.cpp  toml.h  var.cpp  var.h
gamebook/source/io/: buttonmanager.cpp  buttonmanager.h  inputmanager.cpp  inputmanager.h  iomath.cpp  iomath.h
gamebook/source/logicstr/: actionmanager.cpp  actionmanager.h  conditionmanager.cpp  conditionmanager.h  executor.cpp  executor.h  nodechain.cpp  nodechain.h  stringformater.cpp  stringformater.h  variablemanager.cpp  variablemanager.h
gamebook/source/noise/: noise.cpp  noise.h
gamebook/source/pages/: button.h  conditionmanager.cpp  page.cpp  page.h
gamebook/source/render/: console.cpp  console.h  rendermath.cpp  rendermath.h  ui.cpp  ui.h
gamebook/source/save/: save.cpp  save.h
gamebook/source/splashframe/: splashframe.cpp  splashframe.h
gamebook/source/system/: file.cpp  file.h
gamebook/source/web/: buttonmanager.cpp  buttonmanager.h
gamebook/web/: client.data  client.ini  client.js  client.wasm  clientV0.3.js  clientV0.3.wasm  clientV0.5.data  clientV0.5.js  compile_commands.json  config.toml  index.html  package-lock.json
gamebook/web/assets/: demo.toml
gamebook/web/assets/pages/: great.toml
gamebook/web/pages/: C_0_s_1.toml  C_0_s_2.toml  C_0_s_3.toml  C_0_s_4.toml  C_0_s_5.toml  C_1_s_1.toml  C_1_s_10.toml  C_1_s_11.toml  C_1_s_12.toml  C_1_s_13.toml  C_1_s_14.toml  C_1_s_15.toml  C_1_s_16.toml  C_1_s_17.toml  C_1_s_18.toml  C_1_s_19.toml  C_1_s_2.toml  C_1_s_20.toml  C_1_s_21.toml  C_1_s_22.toml  C_1_s_23.toml  C_1_s_24.toml  C_1_s_25.toml  C_1_s_26.toml  C_1_s_27.toml  C_1_s_3.toml  C_1_s_4.toml  C_1_s_5.toml  C_1_s_6.toml  C_1_s_9.toml  C_2_s_13.toml  C_2_s_17.toml  C_2_s_18.toml  C_2_s_19.toml  C_2_s_2.toml  C_2_s_20.toml  C_2_s_25.toml  C_2_s_29.toml  C_2_s_3.toml  C_2_s_4.toml  (+49 more)
(+30 files in other folders)
